// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`evaluateFhirDataService tests Evaluate Encounter Info: Encounter Details Evaluate Encounter Care Team should return the correct Encounter care team 1`] = `
<JsonTable
  className="caption-data-title margin-y-0"
  jsonTableData={
    {
      "resultName": "Encounter Care Team",
      "tables": [
        [
          {
            "Dates": {
              "value": <span
                className="text-italic text-base"
              >
                No data
              </span>,
            },
            "Name": {
              "value": <span
                className="text-italic text-base"
              >
                No data
              </span>,
            },
            "Role": {
              "value": "attender",
            },
          },
        ],
      ],
    }
  }
/>
`;

exports[`evaluateFhirDataService tests Evaluate Encounter Info: Encounter Details Evaluate Encounter Diagnoses should return the correct diagnoses given an Encounter 1`] = `"OTHER MUSCLE SPASM"`;

exports[`evaluateFhirDataService tests Evaluate Encounter Info: Facility Details should return the correct Facility data 1`] = `
{
  "availableData": [
    {
      "title": "Facility Name",
      "value": "Location Name",
    },
    {
      "title": "Facility Address",
      "value": "37 Test Cir
Suite Test
Test City, TT 0000
US",
    },
    {
      "title": "Facility Contact Address",
      "value": "37 Test Cir
Suite Test
Test City, TT 0000
US",
    },
    {
      "title": "Facility Contact",
      "value": "Work: 615-322-5000",
    },
    {
      "title": "Facility Type",
      "value": "Healthcare facility",
    },
    {
      "title": "Facility ID",
      "value": "test-id-value",
    },
  ],
  "unavailableData": [],
}
`;

exports[`evaluateFhirDataService tests Evaluate Encounter Info: Hospital Encounter Details A bundle with only Discharge Diagnosis returns that data and matches snapshot 1`] = `
{
  "availableData": [
    {
      "table": true,
      "title": "Hospital Discharge Diagnosis",
      "value": <EvaluateTable
        caption="Hospital Discharge Diagnosis"
        columns={
          [
            {
              "columnName": "Problem",
              "infoPath": "code",
            },
            {
              "applyToValue": [Function],
              "columnName": "Date/Time",
              "infoPath": "conditionOnsetDate",
            },
          ]
        }
        resources={
          [
            {
              "category": [
                {
                  "coding": [
                    {
                      "code": "problem-item-list",
                      "display": "Problem List Item",
                      "system": "http://hl7.org/fhir/us/core/ValueSet/us-core-condition-category",
                    },
                  ],
                },
              ],
              "code": {
                "coding": [
                  {
                    "code": "840539006",
                    "display": "Disease caused by severe acute respiratory syndrome coronavirus 2 (disorder)",
                    "system": "http://snomed.info/sct",
                  },
                ],
              },
              "extension": [
                {
                  "url": "https://reportstream.cdc.gov/fhir/StructureDefinition/condition-code",
                  "valueCoding": {
                    "code": "840539006",
                    "system": "http://snomed.info/sct",
                  },
                },
              ],
              "id": "d42c4a1f-f700-61bf-62a0-c034257d6a79",
              "identifier": [
                {
                  "system": "urn:ietf:rfc:3986",
                  "value": "urn:uuid:ab1791b0-5c71-11e3-9c78-0800200c9a67",
                },
              ],
              "meta": {
                "source": "ecr",
              },
              "onsetDateTime": "2025-02-05",
              "resourceType": "Condition",
              "subject": {
                "reference": "Patient/b43c2096-4da1-40a5-ba09-db73e169af28",
              },
            },
          ]
        }
      />,
    },
  ],
  "unavailableData": [
    {
      "table": true,
      "title": "Hospital Admission Diagnosis",
      "value": undefined,
    },
    {
      "table": true,
      "title": "Admission Medications",
      "value": undefined,
    },
  ],
}
`;

exports[`evaluateFhirDataService tests Evaluate Encounter Info: Hospital Encounter Details should return Admission Medication data when present and match snapshot 1`] = `
{
  "availableData": [
    {
      "table": true,
      "title": "Admission Medications",
      "value": <EvaluateTable
        caption="Admission Medications"
        className="margin-y-0"
        columns={
          [
            {
              "columnName": "Medication Name",
              "evaluateEntry": [Function],
            },
            {
              "columnName": "Dose Quantity",
              "infoPath": "medicationDose",
            },
            {
              "columnName": "Start Date",
              "evaluateEntry": [Function],
            },
            {
              "columnName": "Status",
              "infoPath": "status",
            },
            {
              "columnName": "Details",
              "evaluateEntry": [Function],
              "hiddenBaseText": "details",
            },
          ]
        }
        resources={
          [
            {
              "dosage": {
                "dose": {
                  "value": 12,
                },
                "rateQuantity": {
                  "unit": "h",
                  "value": 24,
                },
                "route": {
                  "coding": [
                    {
                      "code": "C38288",
                      "display": "ORAL",
                      "system": "urn:oid:2.16.840.1.113883.3.26.1.1",
                    },
                  ],
                },
              },
              "effectivePeriod": {
                "start": "2012-03-18",
              },
              "id": "068be591-bf2d-03d4-6c67-23e8fd05c490",
              "identifier": [
                {
                  "system": "urn:ietf:rfc:3986",
                  "value": "urn:uuid:6c844c75-aa34-411c-b7bd-5e4a9f206e29",
                },
              ],
              "medicationReference": {
                "reference": "Medication/9afc88b7-cb49-3871-955b-abcf1d5d211a",
              },
              "meta": {
                "source": "ecr",
              },
              "partOf": [
                {
                  "reference": "MedicationDispense/c68c4e1d-73da-6344-f9ce-000197912f5d",
                },
                {
                  "reference": "MedicationDispense/eb3f12ff-c102-c447-422d-9698f0b27e25",
                },
              ],
              "reasonReference": [
                {
                  "reference": "Condition/d744cf5d-4e8a-503c-84d9-3843de241f4f",
                },
              ],
              "resourceType": "MedicationAdministration",
              "status": "in-progress",
              "subject": {
                "reference": "Patient/f238f1ae-2f55-cd21-5c90-5e68a10af8ce",
              },
              "supportingInformation": [
                {
                  "reference": "AdverseEvent/006ee19c-8e8c-5d46-07fb-66effdc15d69",
                },
                {
                  "reference": "AdverseEvent/f259a79b-8195-e5e2-0431-e8aeb96f2da9",
                },
                {
                  "reference": "AdverseEvent/075cef1c-9dd0-0d27-3f3c-c7daddbeec15",
                },
              ],
            },
            {
              "dosage": {
                "dose": {
                  "value": 1,
                },
                "rateQuantity": {
                  "unit": "h",
                  "value": 12,
                },
                "route": {
                  "coding": [
                    {
                      "code": "C38288",
                      "display": "ORAL",
                      "system": "urn:oid:2.16.840.1.113883.3.26.1.1",
                    },
                  ],
                },
              },
              "effectivePeriod": {
                "start": "2012-03-18",
              },
              "id": "4151cb09-ad12-7ad3-ecd8-993e87d95b72",
              "identifier": [
                {
                  "system": "urn:ietf:rfc:3986",
                  "value": "urn:uuid:6c844c75-aa34-411c-b7bd-5e4a9f206e29",
                },
              ],
              "medicationReference": {
                "reference": "Medication/c08fbd5d-7eeb-2beb-4d8c-f56b7e3ca3da",
              },
              "meta": {
                "source": "ecr",
              },
              "partOf": [
                {
                  "reference": "MedicationDispense/04dc2b51-ca49-764b-cc16-e4c41a0f37a1",
                },
              ],
              "performer": [
                {
                  "actor": {
                    "reference": "Practitioner/69062607-c892-fa70-b750-a67446046070",
                  },
                },
              ],
              "reasonReference": [
                {
                  "reference": "Condition/d744cf5d-4e8a-503c-84d9-3843de241f4f",
                },
              ],
              "resourceType": "MedicationAdministration",
              "status": "in-progress",
              "subject": {
                "reference": "Patient/f238f1ae-2f55-cd21-5c90-5e68a10af8ce",
              },
              "supportingInformation": [
                {
                  "reference": "AdverseEvent/006ee19c-8e8c-5d46-07fb-66effdc15d69",
                },
              ],
            },
            {
              "dosage": {
                "dose": {
                  "value": 1,
                },
                "rateQuantity": {
                  "unit": "h",
                  "value": 12,
                },
                "route": {
                  "coding": [
                    {
                      "code": "C38288",
                      "display": "ORAL",
                      "system": "urn:oid:2.16.840.1.113883.3.26.1.1",
                    },
                  ],
                },
              },
              "effectivePeriod": {
                "start": "2012-03-18",
              },
              "id": "fa8e7481-d6b3-862f-40a6-6b9777b25f29",
              "identifier": [
                {
                  "system": "urn:ietf:rfc:3986",
                  "value": "urn:uuid:6c844c75-aa34-411c-b7bd-5e4a9f206e29",
                },
              ],
              "medicationReference": {
                "reference": "Medication/4361c210-6a33-4124-2863-0853046ef9a9",
              },
              "meta": {
                "source": "ecr",
              },
              "partOf": [
                {
                  "reference": "MedicationDispense/c68c4e1d-73da-6344-f9ce-000197912f5d",
                },
              ],
              "performer": [
                {
                  "actor": {
                    "reference": "Practitioner/69062607-c892-fa70-b750-a67446046070",
                  },
                },
              ],
              "reasonReference": [
                {
                  "reference": "Condition/d744cf5d-4e8a-503c-84d9-3843de241f4f",
                },
              ],
              "resourceType": "MedicationAdministration",
              "status": "in-progress",
              "subject": {
                "reference": "Patient/f238f1ae-2f55-cd21-5c90-5e68a10af8ce",
              },
              "supportingInformation": [
                {
                  "reference": "AdverseEvent/006ee19c-8e8c-5d46-07fb-66effdc15d69",
                },
              ],
            },
          ]
        }
      />,
    },
  ],
  "unavailableData": [
    {
      "table": true,
      "title": "Hospital Admission Diagnosis",
      "value": undefined,
    },
    {
      "table": true,
      "title": "Hospital Discharge Diagnosis",
      "value": undefined,
    },
  ],
}
`;

exports[`evaluateFhirDataService tests Evaluate Encounter Info: Hospital Encounter Details should return Hospital Encounter Data for Admission and Discharge Diagnosis when present and match snapshot 1`] = `
{
  "availableData": [
    {
      "table": true,
      "title": "Hospital Admission Diagnosis",
      "value": <EvaluateTable
        caption="Hospital Admission Diagnosis"
        columns={
          [
            {
              "columnName": "Problem",
              "infoPath": "code",
            },
            {
              "applyToValue": [Function],
              "columnName": "Date/Time",
              "infoPath": "conditionOnsetDate",
            },
          ]
        }
        resources={
          [
            {
              "category": [
                {
                  "coding": [
                    {
                      "code": "problem-item-list",
                      "display": "Problem List Item",
                      "system": "http://hl7.org/fhir/us/core/ValueSet/us-core-condition-category",
                    },
                  ],
                },
              ],
              "code": {
                "coding": [
                  {
                    "code": "840539006",
                    "display": "Disease caused by severe acute respiratory syndrome coronavirus 2 (disorder)",
                    "system": "http://snomed.info/sct",
                  },
                ],
              },
              "extension": [
                {
                  "url": "https://reportstream.cdc.gov/fhir/StructureDefinition/condition-code",
                  "valueCoding": {
                    "code": "840539006",
                    "system": "http://snomed.info/sct",
                  },
                },
              ],
              "id": "d42c4a1f-f700-61bf-62a0-c034257d6a79",
              "identifier": [
                {
                  "system": "urn:ietf:rfc:3986",
                  "value": "urn:uuid:ab1791b0-5c71-11e3-9c78-0800200c9a67",
                },
              ],
              "meta": {
                "source": "ecr",
              },
              "onsetDateTime": "2025-02-05",
              "resourceType": "Condition",
              "subject": {
                "reference": "Patient/b43c2096-4da1-40a5-ba09-db73e169af28",
              },
            },
          ]
        }
      />,
    },
    {
      "table": true,
      "title": "Hospital Discharge Diagnosis",
      "value": <EvaluateTable
        caption="Hospital Discharge Diagnosis"
        columns={
          [
            {
              "columnName": "Problem",
              "infoPath": "code",
            },
            {
              "applyToValue": [Function],
              "columnName": "Date/Time",
              "infoPath": "conditionOnsetDate",
            },
          ]
        }
        resources={
          [
            {
              "category": [
                {
                  "coding": [
                    {
                      "code": "problem-item-list",
                      "display": "Problem List Item",
                      "system": "http://hl7.org/fhir/us/core/ValueSet/us-core-condition-category",
                    },
                  ],
                },
              ],
              "code": {
                "coding": [
                  {
                    "code": "840539006",
                    "display": "Disease caused by severe acute respiratory syndrome coronavirus 2 (disorder)",
                    "system": "http://snomed.info/sct",
                  },
                ],
              },
              "extension": [
                {
                  "url": "https://reportstream.cdc.gov/fhir/StructureDefinition/condition-code",
                  "valueCoding": {
                    "code": "840539006",
                    "system": "http://snomed.info/sct",
                  },
                },
              ],
              "id": "d42c4a1f-f700-61bf-62a0-c034257d6a79",
              "identifier": [
                {
                  "system": "urn:ietf:rfc:3986",
                  "value": "urn:uuid:ab1791b0-5c71-11e3-9c78-0800200c9a67",
                },
              ],
              "meta": {
                "source": "ecr",
              },
              "onsetDateTime": "2025-02-05",
              "resourceType": "Condition",
              "subject": {
                "reference": "Patient/b43c2096-4da1-40a5-ba09-db73e169af28",
              },
            },
          ]
        }
      />,
    },
  ],
  "unavailableData": [
    {
      "table": true,
      "title": "Admission Medications",
      "value": undefined,
    },
  ],
}
`;

exports[`evaluateFhirDataService tests Evaluate Encounter Info: Provider Details Social Determinants of Health should display sdoh data  1`] = `
<div>
  <div
    class="display-flex"
  >
    <div
      class="margin-left-auto padding-top-1"
    >
      <button
        class="usa-button usa-button--unstyled"
        data-testid="button"
        type="button"
      >
        Expand all 
        social determinants of health
      </button>
      <span
        class="vertical-line"
      />
      <button
        class="usa-button usa-button--unstyled"
        data-testid="button"
        type="button"
      >
        Collapse all 
        social determinants of health
      </button>
    </div>
  </div>
  <div
    class="usa-accordion accordion-rr"
    data-allow-multiple="true"
    data-testid="accordion"
  >
    <h5
      class="usa-accordion__heading side-nav-ignore"
    >
      <button
        aria-controls="6043782e-cc31-f47e-c11a-4f0fcd97983f-r:id-0"
        aria-expanded="false"
        class="usa-accordion__button"
        data-testid="accordionButton_6043782e-cc31-f47e-c11a-4f0fcd97983f-r:id-0"
        type="button"
      >
        <div
          class="display-flex flex-row flex-no-wrap flex-justify"
        >
          <span>
            B1300 Health Literacy
          </span>
          <span
            class="font-size-xs text-base"
          >
            02/05/2025
          </span>
        </div>
      </button>
    </h5>
    <div
      class="usa-accordion__content usa-prose side-nav-ignore"
      data-testid="accordionItem_6043782e-cc31-f47e-c11a-4f0fcd97983f-r:id-0"
      hidden=""
      id="6043782e-cc31-f47e-c11a-4f0fcd97983f-r:id-0"
    >
      <table
        class="usa-table usa-table--borderless width-full table-caption-margin caption-normal-weight margin-bottom-2 caption-data-title margin-y-0"
        data-testid="table"
      >
        <thead>
          <tr>
            <th
              class="table-header bg-gray-5"
              scope="col"
              style="width: 200px; min-width: 100px;"
            >
              Question
            </th>
            <th
              class="table-header bg-gray-5"
              scope="col"
              style="width: 80px; min-width: 80px;"
            >
              Answer
            </th>
          </tr>
        </thead>
        <tbody>
          <tr>
            <td>
              How often do you need to have someone help you when you read instructions, pamphlets, or other written material from your doctor or pharmacy [SILS]
            </td>
            <td>
              Never
            </td>
          </tr>
        </tbody>
      </table>
      <h6
        class="bg-gray-5 margin-x-neg-205 padding-y-2 padding-x-205"
        style="margin-top: -1rem; font-weight: bold; border-bottom: 1px solid black;"
      >
        Available Social Determinants of Health Information
      </h6>
      <div>
        <div
          class="grid-row"
        >
          <div
            class="data-title padding-right-1"
          >
            Finding
          </div>
          <div
            class="grid-col maxw7 text-pre-line p-list"
          >
            Adequate Health Literacy
          </div>
        </div>
      </div>
    </div>
    <h5
      class="usa-accordion__heading side-nav-ignore"
    >
      <button
        aria-controls="3333c99c-14b0-43f5-e33f-033776972414-r:id-1"
        aria-expanded="false"
        class="usa-accordion__button"
        data-testid="accordionButton_3333c99c-14b0-43f5-e33f-033776972414-r:id-1"
        type="button"
      >
        <div
          class="display-flex flex-row flex-no-wrap flex-justify"
        >
          <span>
            Tobacco use panel
          </span>
          <span
            class="font-size-xs text-base"
          >
            02/05/2025
          </span>
        </div>
      </button>
    </h5>
    <div
      class="usa-accordion__content usa-prose side-nav-ignore"
      data-testid="accordionItem_3333c99c-14b0-43f5-e33f-033776972414-r:id-1"
      hidden=""
      id="3333c99c-14b0-43f5-e33f-033776972414-r:id-1"
    >
      <table
        class="usa-table usa-table--borderless width-full table-caption-margin caption-normal-weight margin-bottom-2 caption-data-title margin-y-0"
        data-testid="table"
      >
        <thead>
          <tr>
            <th
              class="table-header bg-gray-5"
              scope="col"
              style="width: 200px; min-width: 100px;"
            >
              Question
            </th>
            <th
              class="table-header bg-gray-5"
              scope="col"
              style="width: 80px; min-width: 80px;"
            >
              Answer
            </th>
          </tr>
        </thead>
        <tbody>
          <tr>
            <td>
              Tobacco smoking status
            </td>
            <td>
              Never Assessed
            </td>
          </tr>
          <tr>
            <td>
              Smokeless tobacco status
            </td>
            <td>
              Unknown
            </td>
          </tr>
          <tr>
            <td>
              Passive Exposure
            </td>
            <td>
              Never
            </td>
          </tr>
        </tbody>
      </table>
      <h6
        class="bg-gray-5 margin-x-neg-205 padding-y-2 padding-x-205"
        style="margin-top: -1rem; font-weight: bold; border-bottom: 1px solid black;"
      >
        Available Social Determinants of Health Information
      </h6>
      <div>
        <div
          class="grid-row"
        >
          <div
            class="data-title padding-right-1"
          >
            Finding
          </div>
          <div
            class="grid-col maxw7 text-pre-line p-list"
          >
            Unknown
          </div>
        </div>
      </div>
    </div>
    <h5
      class="usa-accordion__heading side-nav-ignore"
    >
      <button
        aria-controls="08e83857-21a3-e9df-c6cc-78b769a91ff1-r:id-2"
        aria-expanded="false"
        class="usa-accordion__button"
        data-testid="accordionButton_08e83857-21a3-e9df-c6cc-78b769a91ff1-r:id-2"
        type="button"
      >
        <div
          class="display-flex flex-row flex-no-wrap flex-justify"
        >
          <span>
            Overall Financial Resource Strain (CARDIA)
          </span>
          <span
            class="font-size-xs text-base"
          >
            02/05/2025
          </span>
        </div>
      </button>
    </h5>
    <div
      class="usa-accordion__content usa-prose side-nav-ignore"
      data-testid="accordionItem_08e83857-21a3-e9df-c6cc-78b769a91ff1-r:id-2"
      hidden=""
      id="08e83857-21a3-e9df-c6cc-78b769a91ff1-r:id-2"
    >
      <table
        class="usa-table usa-table--borderless width-full table-caption-margin caption-normal-weight margin-bottom-2 caption-data-title margin-y-0"
        data-testid="table"
      >
        <thead>
          <tr>
            <th
              class="table-header bg-gray-5"
              scope="col"
              style="width: 200px; min-width: 100px;"
            >
              Question
            </th>
            <th
              class="table-header bg-gray-5"
              scope="col"
              style="width: 80px; min-width: 80px;"
            >
              Answer
            </th>
          </tr>
        </thead>
        <tbody>
          <tr>
            <td>
              How hard is it for you to pay for the very basics like food, housing, medical care, and heating
            </td>
            <td>
              Somewhat hard
            </td>
          </tr>
        </tbody>
      </table>
      <h6
        class="bg-gray-5 margin-x-neg-205 padding-y-2 padding-x-205"
        style="margin-top: -1rem; font-weight: bold; border-bottom: 1px solid black;"
      >
        Available Social Determinants of Health Information
      </h6>
      <div>
        <div
          class="grid-row"
        >
          <div
            class="data-title padding-right-1"
          >
            Finding
          </div>
          <div
            class="grid-col maxw7 text-pre-line p-list"
          >
            At Risk
          </div>
        </div>
      </div>
    </div>
    <h5
      class="usa-accordion__heading side-nav-ignore"
    >
      <button
        aria-controls="3e459b71-e0fc-f678-a439-ea4ebf040e88-r:id-3"
        aria-expanded="false"
        class="usa-accordion__button"
        data-testid="accordionButton_3e459b71-e0fc-f678-a439-ea4ebf040e88-r:id-3"
        type="button"
      >
        <div
          class="display-flex flex-row flex-no-wrap flex-justify"
        >
          <span>
            Hunger Vital Sign
          </span>
          <span
            class="font-size-xs text-base"
          >
            02/05/2025
          </span>
        </div>
      </button>
    </h5>
    <div
      class="usa-accordion__content usa-prose side-nav-ignore"
      data-testid="accordionItem_3e459b71-e0fc-f678-a439-ea4ebf040e88-r:id-3"
      hidden=""
      id="3e459b71-e0fc-f678-a439-ea4ebf040e88-r:id-3"
    >
      <table
        class="usa-table usa-table--borderless width-full table-caption-margin caption-normal-weight margin-bottom-2 caption-data-title margin-y-0"
        data-testid="table"
      >
        <thead>
          <tr>
            <th
              class="table-header bg-gray-5"
              scope="col"
              style="width: 200px; min-width: 100px;"
            >
              Question
            </th>
            <th
              class="table-header bg-gray-5"
              scope="col"
              style="width: 80px; min-width: 80px;"
            >
              Answer
            </th>
          </tr>
        </thead>
        <tbody>
          <tr>
            <td>
              (I/We) worried whether (my/our) food would run out before (I/we) got money to buy more. 
            </td>
            <td>
              Often true
            </td>
          </tr>
          <tr>
            <td>
              The food that (I/we) bought just didn't last, and (I/we) didn't have money to get more.
            </td>
            <td>
              Often true
            </td>
          </tr>
        </tbody>
      </table>
      <h6
        class="bg-gray-5 margin-x-neg-205 padding-y-2 padding-x-205"
        style="margin-top: -1rem; font-weight: bold; border-bottom: 1px solid black;"
      >
        Available Social Determinants of Health Information
      </h6>
      <div>
        <div
          class="grid-row"
        >
          <div
            class="data-title padding-right-1"
          >
            Finding
          </div>
          <div
            class="grid-col maxw7 text-pre-line p-list"
          >
            Food Insecurity Present
          </div>
        </div>
      </div>
    </div>
    <h5
      class="usa-accordion__heading side-nav-ignore"
    >
      <button
        aria-controls="1c0861e7-d64c-6177-110b-2550659bd8e5-r:id-4"
        aria-expanded="false"
        class="usa-accordion__button"
        data-testid="accordionButton_1c0861e7-d64c-6177-110b-2550659bd8e5-r:id-4"
        type="button"
      >
        <div
          class="display-flex flex-row flex-no-wrap flex-justify"
        >
          <span>
            PRAPARE - Transportation
          </span>
          <span
            class="font-size-xs text-base"
          >
            02/05/2025
          </span>
        </div>
      </button>
    </h5>
    <div
      class="usa-accordion__content usa-prose side-nav-ignore"
      data-testid="accordionItem_1c0861e7-d64c-6177-110b-2550659bd8e5-r:id-4"
      hidden=""
      id="1c0861e7-d64c-6177-110b-2550659bd8e5-r:id-4"
    >
      <table
        class="usa-table usa-table--borderless width-full table-caption-margin caption-normal-weight margin-bottom-2 caption-data-title margin-y-0"
        data-testid="table"
      >
        <thead>
          <tr>
            <th
              class="table-header bg-gray-5"
              scope="col"
              style="width: 200px; min-width: 100px;"
            >
              Question
            </th>
            <th
              class="table-header bg-gray-5"
              scope="col"
              style="width: 80px; min-width: 80px;"
            >
              Answer
            </th>
          </tr>
        </thead>
        <tbody>
          <tr>
            <td>
              In the past 12 months, has lack of transportation kept you from medical appointments or from getting medications?
            </td>
            <td>
              Yes
            </td>
          </tr>
          <tr>
            <td>
              In the past 12 months, has lack of transportation kept you from meetings, work, or from getting things needed for daily living?
            </td>
            <td>
              Yes
            </td>
          </tr>
        </tbody>
      </table>
      <h6
        class="bg-gray-5 margin-x-neg-205 padding-y-2 padding-x-205"
        style="margin-top: -1rem; font-weight: bold; border-bottom: 1px solid black;"
      >
        Available Social Determinants of Health Information
      </h6>
      <div>
        <div
          class="grid-row"
        >
          <div
            class="data-title padding-right-1"
          >
            Finding
          </div>
          <div
            class="grid-col maxw7 text-pre-line p-list"
          >
            Has Transportation Needs
          </div>
        </div>
      </div>
    </div>
    <h5
      class="usa-accordion__heading side-nav-ignore"
    >
      <button
        aria-controls="507ca0e7-4ab0-25c7-ba20-065e745180b3-r:id-5"
        aria-expanded="false"
        class="usa-accordion__button"
        data-testid="accordionButton_507ca0e7-4ab0-25c7-ba20-065e745180b3-r:id-5"
        type="button"
      >
        <div
          class="display-flex flex-row flex-no-wrap flex-justify"
        >
          <span>
            Housing Stability Vital Sign
          </span>
          <span
            class="font-size-xs text-base"
          >
            02/05/2025
          </span>
        </div>
      </button>
    </h5>
    <div
      class="usa-accordion__content usa-prose side-nav-ignore"
      data-testid="accordionItem_507ca0e7-4ab0-25c7-ba20-065e745180b3-r:id-5"
      hidden=""
      id="507ca0e7-4ab0-25c7-ba20-065e745180b3-r:id-5"
    >
      <table
        class="usa-table usa-table--borderless width-full table-caption-margin caption-normal-weight margin-bottom-2 caption-data-title margin-y-0"
        data-testid="table"
      >
        <thead>
          <tr>
            <th
              class="table-header bg-gray-5"
              scope="col"
              style="width: 200px; min-width: 100px;"
            >
              Question
            </th>
            <th
              class="table-header bg-gray-5"
              scope="col"
              style="width: 80px; min-width: 80px;"
            >
              Answer
            </th>
          </tr>
        </thead>
        <tbody>
          <tr>
            <td>
              In the past 12 months, was there a time when you were not able to pay the mortgage or rent on time?
            </td>
            <td>
              Yes
            </td>
          </tr>
          <tr>
            <td>
              In the past 12 months, how many times have you moved where you were living?
            </td>
            <td>
              0
            </td>
          </tr>
          <tr>
            <td>
              At any time in the past 12 months, were you homeless or living in shelter [including now]?
            </td>
            <td>
              No
            </td>
          </tr>
        </tbody>
      </table>
      <h6
        class="bg-gray-5 margin-x-neg-205 padding-y-2 padding-x-205"
        style="margin-top: -1rem; font-weight: bold; border-bottom: 1px solid black;"
      >
        Available Social Determinants of Health Information
      </h6>
      <div>
        <div
          class="grid-row"
        >
          <div
            class="data-title padding-right-1"
          >
            Finding
          </div>
          <div
            class="grid-col maxw7 text-pre-line p-list"
          >
            High Risk
          </div>
        </div>
      </div>
    </div>
    <h5
      class="usa-accordion__heading side-nav-ignore"
    >
      <button
        aria-controls="38da63a4-0813-4467-1d2e-a271402e4e3e-r:id-6"
        aria-expanded="false"
        class="usa-accordion__button"
        data-testid="accordionButton_38da63a4-0813-4467-1d2e-a271402e4e3e-r:id-6"
        type="button"
      >
        <div
          class="display-flex flex-row flex-no-wrap flex-justify"
        >
          <span>
            Caregiver Education and Work
          </span>
          <span
            class="font-size-xs text-base"
          >
            02/05/2025
          </span>
        </div>
      </button>
    </h5>
    <div
      class="usa-accordion__content usa-prose side-nav-ignore"
      data-testid="accordionItem_38da63a4-0813-4467-1d2e-a271402e4e3e-r:id-6"
      hidden=""
      id="38da63a4-0813-4467-1d2e-a271402e4e3e-r:id-6"
    >
      <table
        class="usa-table usa-table--borderless width-full table-caption-margin caption-normal-weight margin-bottom-2 caption-data-title margin-y-0"
        data-testid="table"
      >
        <thead>
          <tr>
            <th
              class="table-header bg-gray-5"
              scope="col"
              style="width: 200px; min-width: 100px;"
            >
              Question
            </th>
            <th
              class="table-header bg-gray-5"
              scope="col"
              style="width: 80px; min-width: 80px;"
            >
              Answer
            </th>
          </tr>
        </thead>
        <tbody>
          <tr>
            <td>
              Do you have a high school degree?
            </td>
            <td>
              Yes
            </td>
          </tr>
          <tr>
            <td>
              Do you ever need help reading hospital materials?
            </td>
            <td>
              No
            </td>
          </tr>
        </tbody>
      </table>
      <h6
        class="bg-gray-5 margin-x-neg-205 padding-y-2 padding-x-205"
        style="margin-top: -1rem; font-weight: bold; border-bottom: 1px solid black;"
      >
        Available Social Determinants of Health Information
      </h6>
      <div>
        <div
          class="grid-row"
        >
          <div
            class="data-title padding-right-1"
          >
            Finding
          </div>
          <div
            class="grid-col maxw7 text-pre-line p-list"
          >
            Low Risk
          </div>
        </div>
      </div>
    </div>
    <h5
      class="usa-accordion__heading side-nav-ignore"
    >
      <button
        aria-controls="bc920363-0b1b-f8cb-9977-e19de455b82c-r:id-7"
        aria-expanded="false"
        class="usa-accordion__button"
        data-testid="accordionButton_bc920363-0b1b-f8cb-9977-e19de455b82c-r:id-7"
        type="button"
      >
        <div
          class="display-flex flex-row flex-no-wrap flex-justify"
        >
          <span>
            Safety and Environment
          </span>
          <span
            class="font-size-xs text-base"
          >
            02/05/2025
          </span>
        </div>
      </button>
    </h5>
    <div
      class="usa-accordion__content usa-prose side-nav-ignore"
      data-testid="accordionItem_bc920363-0b1b-f8cb-9977-e19de455b82c-r:id-7"
      hidden=""
      id="bc920363-0b1b-f8cb-9977-e19de455b82c-r:id-7"
    >
      <table
        class="usa-table usa-table--borderless width-full table-caption-margin caption-normal-weight margin-bottom-2 caption-data-title margin-y-0"
        data-testid="table"
      >
        <thead>
          <tr>
            <th
              class="table-header bg-gray-5"
              scope="col"
              style="width: 200px; min-width: 100px;"
            >
              Question
            </th>
            <th
              class="table-header bg-gray-5"
              scope="col"
              style="width: 80px; min-width: 80px;"
            >
              Answer
            </th>
          </tr>
        </thead>
        <tbody>
          <tr>
            <td>
              Do you worry that your child may have been physically abused?
            </td>
            <td>
              No
            </td>
          </tr>
          <tr>
            <td>
              Do you worry that your child may have been sexually abused?
            </td>
            <td>
              No
            </td>
          </tr>
          <tr>
            <td>
              Are there any guns kept in or around your home or where your child spends time?
            </td>
            <td>
              No
            </td>
          </tr>
          <tr>
            <td>
              Guns Unloaded or Locked Away
            </td>
            <td>
              Not on file
            </td>
          </tr>
        </tbody>
      </table>
      <h6
        class="bg-gray-5 margin-x-neg-205 padding-y-2 padding-x-205"
        style="margin-top: -1rem; font-weight: bold; border-bottom: 1px solid black;"
      >
        Available Social Determinants of Health Information
      </h6>
      <div>
        <div
          class="grid-row"
        >
          <div
            class="data-title padding-right-1"
          >
            Finding
          </div>
          <div
            class="grid-col maxw7 text-pre-line p-list"
          >
            Low Risk
          </div>
        </div>
      </div>
    </div>
    <h5
      class="usa-accordion__heading side-nav-ignore"
    >
      <button
        aria-controls="56badf14-c5b2-f6c4-5b8c-15d77989efc4-r:id-8"
        aria-expanded="false"
        class="usa-accordion__button"
        data-testid="accordionButton_56badf14-c5b2-f6c4-5b8c-15d77989efc4-r:id-8"
        type="button"
      >
        <div
          class="display-flex flex-row flex-no-wrap flex-justify"
        >
          <span>
            Caregiver Health
          </span>
          <span
            class="font-size-xs text-base"
          >
            02/05/2025
          </span>
        </div>
      </button>
    </h5>
    <div
      class="usa-accordion__content usa-prose side-nav-ignore"
      data-testid="accordionItem_56badf14-c5b2-f6c4-5b8c-15d77989efc4-r:id-8"
      hidden=""
      id="56badf14-c5b2-f6c4-5b8c-15d77989efc4-r:id-8"
    >
      <table
        class="usa-table usa-table--borderless width-full table-caption-margin caption-normal-weight margin-bottom-2 caption-data-title margin-y-0"
        data-testid="table"
      >
        <thead>
          <tr>
            <th
              class="table-header bg-gray-5"
              scope="col"
              style="width: 200px; min-width: 100px;"
            >
              Question
            </th>
            <th
              class="table-header bg-gray-5"
              scope="col"
              style="width: 80px; min-width: 80px;"
            >
              Answer
            </th>
          </tr>
        </thead>
        <tbody>
          <tr>
            <td>
              Over the past two weeks, how often have you felt little interest or pleasure in doing things?
            </td>
            <td>
              Not at all
            </td>
          </tr>
          <tr>
            <td>
              Over the past two weeks have you been bothered by feeling down, depressed, or hopeless?
            </td>
            <td>
              Not at all
            </td>
          </tr>
          <tr>
            <td>
              Does anyone in your home have a problem with alcohol, marijuana, other substances?
            </td>
            <td>
              No
            </td>
          </tr>
        </tbody>
      </table>
      <h6
        class="bg-gray-5 margin-x-neg-205 padding-y-2 padding-x-205"
        style="margin-top: -1rem; font-weight: bold; border-bottom: 1px solid black;"
      >
        Available Social Determinants of Health Information
      </h6>
      <div>
        <div
          class="grid-row"
        >
          <div
            class="data-title padding-right-1"
          >
            Finding
          </div>
          <div
            class="grid-col maxw7 text-pre-line p-list"
          >
            Low Risk
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`evaluateFhirDataService tests Evaluate Patient Info: Social History Evaluate Occupation History should match snapshot when all fields present 1`] = `
<ExpandCollapseAccordion
  className="accordion-rr"
  descriptor="employment details"
  items={
    [
      {
        "content": <React.Fragment>
          <DataDisplay
            item={
              {
                "title": "Dates",
                "value": "01/04/2020 - Present",
              }
            }
          />
          <DataDisplay
            item={
              {
                "title": "Industry",
                "value": "~industry~",
              }
            }
          />
          <DataDisplay
            item={
              {
                "fullWidthContent": true,
                "title": "Workplace Information",
                "value": [
                  <DataDisplay
                    item={
                      {
                        "dividerLine": false,
                        "title": "Address",
                        "titleNormal": true,
                        "value": "123 Test St
Nowhereville, KS",
                      }
                    }
                  />,
                  <DataDisplay
                    item={
                      {
                        "dividerLine": false,
                        "title": "Schedule",
                        "titleNormal": true,
                        "value": "~schedule~",
                      }
                    }
                  />,
                  <DataDisplay
                    item={
                      {
                        "dividerLine": false,
                        "title": "Hours",
                        "titleNormal": true,
                        "value": "~hours~",
                      }
                    }
                  />,
                  <DataDisplay
                    item={
                      {
                        "dividerLine": false,
                        "title": "Days",
                        "titleNormal": true,
                        "value": "~days~",
                      }
                    }
                  />,
                  <DataDisplay
                    item={
                      {
                        "dividerLine": false,
                        "title": "Duties",
                        "titleNormal": true,
                        "value": "~duties~",
                      }
                    }
                  />,
                  <DataDisplay
                    item={
                      {
                        "dividerLine": false,
                        "title": "Pay Grade",
                        "titleNormal": true,
                        "value": "~pay grade~",
                      }
                    }
                  />,
                  <DataDisplay
                    item={
                      {
                        "dividerLine": false,
                        "title": "Employment Type",
                        "titleNormal": true,
                        "value": "~employment type~",
                      }
                    }
                  />,
                ],
              }
            }
          />
          <DataDisplay
            item={
              {
                "dividerLine": false,
                "title": "Hazard",
                "value": "~hazard~",
              }
            }
          />
        </React.Fragment>,
        "expanded": false,
        "headingLevel": "h5",
        "id": "12345",
        "title": <div
          className="display-flex flex-row flex-no-wrap flex-justify"
        >
          <span />
          <span
            className="font-size-xs text-base"
          >
            Current
             Employment
          </span>
        </div>,
      },
    ]
  }
/>
`;

exports[`evaluateFhirDataService tests Evaluate Patient Info: Social History Evaluate Occupation History should match snapshot when job comes from social history Obs 1`] = `
<ExpandCollapseAccordion
  className="accordion-rr"
  descriptor="employment details"
  items={
    [
      {
        "content": <React.Fragment>
          <DataDisplay
            item={
              {
                "title": "Dates",
                "value": "01/04/2025 3:00 AM EST",
              }
            }
          />
          <DataDisplay
            item={
              {
                "title": "Industry",
                "value": <span
                  className="text-italic text-base"
                >
                  No data
                </span>,
              }
            }
          />
          <DataDisplay
            item={
              {
                "fullWidthContent": false,
                "title": "Workplace Information",
                "value": <span
                  className="text-italic text-base"
                >
                  No data
                </span>,
              }
            }
          />
          <DataDisplay
            item={
              {
                "dividerLine": false,
                "title": "Hazard",
                "value": <span
                  className="text-italic text-base"
                >
                  No data
                </span>,
              }
            }
          />
        </React.Fragment>,
        "expanded": false,
        "headingLevel": "h5",
        "id": "12345",
        "title": <div
          className="display-flex flex-row flex-no-wrap flex-justify"
        >
          <span>
            Construction
          </span>
          <span
            className="font-size-xs text-base"
          >
            Current
             Employment
          </span>
        </div>,
      },
    ]
  }
/>
`;

exports[`evaluateFhirDataService tests Evaluate Patient Info: Social History Evaluate Occupation History should match snapshot when multiple jobs and sort correctly 1`] = `
<ExpandCollapseAccordion
  className="accordion-rr"
  descriptor="employment details"
  items={
    [
      {
        "content": <React.Fragment>
          <DataDisplay
            item={
              {
                "title": "Dates",
                "value": "01/04/2020 - Present",
              }
            }
          />
          <DataDisplay
            item={
              {
                "title": "Industry",
                "value": "~industry~",
              }
            }
          />
          <DataDisplay
            item={
              {
                "fullWidthContent": false,
                "title": "Workplace Information",
                "value": <span
                  className="text-italic text-base"
                >
                  No data
                </span>,
              }
            }
          />
          <DataDisplay
            item={
              {
                "dividerLine": false,
                "title": "Hazard",
                "value": "~hazard~",
              }
            }
          />
        </React.Fragment>,
        "expanded": false,
        "headingLevel": "h5",
        "id": "12346",
        "title": <div
          className="display-flex flex-row flex-no-wrap flex-justify"
        >
          <span />
          <span
            className="font-size-xs text-base"
          >
            Current
             Employment
          </span>
        </div>,
      },
      {
        "content": <React.Fragment>
          <DataDisplay
            item={
              {
                "title": "Dates",
                "value": "01/04/2015 - Present",
              }
            }
          />
          <DataDisplay
            item={
              {
                "title": "Industry",
                "value": "~industry~",
              }
            }
          />
          <DataDisplay
            item={
              {
                "fullWidthContent": false,
                "title": "Workplace Information",
                "value": <span
                  className="text-italic text-base"
                >
                  No data
                </span>,
              }
            }
          />
          <DataDisplay
            item={
              {
                "dividerLine": false,
                "title": "Hazard",
                "value": "~hazard~",
              }
            }
          />
        </React.Fragment>,
        "expanded": false,
        "headingLevel": "h5",
        "id": "12347",
        "title": <div
          className="display-flex flex-row flex-no-wrap flex-justify"
        >
          <span />
          <span
            className="font-size-xs text-base"
          >
            Current
             Employment
          </span>
        </div>,
      },
      {
        "content": <React.Fragment>
          <DataDisplay
            item={
              {
                "title": "Dates",
                "value": "01/04/2018 - 01/04/2022",
              }
            }
          />
          <DataDisplay
            item={
              {
                "title": "Industry",
                "value": "~industry~",
              }
            }
          />
          <DataDisplay
            item={
              {
                "fullWidthContent": false,
                "title": "Workplace Information",
                "value": <span
                  className="text-italic text-base"
                >
                  No data
                </span>,
              }
            }
          />
          <DataDisplay
            item={
              {
                "dividerLine": false,
                "title": "Hazard",
                "value": "~hazard~",
              }
            }
          />
        </React.Fragment>,
        "expanded": false,
        "headingLevel": "h5",
        "id": "12345",
        "title": <div
          className="display-flex flex-row flex-no-wrap flex-justify"
        >
          <span />
          <span
            className="font-size-xs text-base"
          >
            Past
             Employment
          </span>
        </div>,
      },
    ]
  }
/>
`;

exports[`evaluateFhirDataService tests Evaluate Patient Info: Social History Evaluate Occupation History should match snapshot when multiple jobs come from both social history and PastOrPresent Obs 1`] = `
<ExpandCollapseAccordion
  className="accordion-rr"
  descriptor="employment details"
  items={
    [
      {
        "content": <React.Fragment>
          <DataDisplay
            item={
              {
                "title": "Dates",
                "value": "01/04/2020 - Present",
              }
            }
          />
          <DataDisplay
            item={
              {
                "title": "Industry",
                "value": <span
                  className="text-italic text-base"
                >
                  No data
                </span>,
              }
            }
          />
          <DataDisplay
            item={
              {
                "fullWidthContent": true,
                "title": "Workplace Information",
                "value": [
                  <DataDisplay
                    item={
                      {
                        "dividerLine": false,
                        "title": "Address",
                        "titleNormal": true,
                        "value": "123 Test St
Nowhereville, KS",
                      }
                    }
                  />,
                  <DataDisplay
                    item={
                      {
                        "dividerLine": false,
                        "title": "Schedule",
                        "titleNormal": true,
                        "value": <span
                          className="text-italic text-base"
                        >
                          No data
                        </span>,
                      }
                    }
                  />,
                  <DataDisplay
                    item={
                      {
                        "dividerLine": false,
                        "title": "Hours",
                        "titleNormal": true,
                        "value": <span
                          className="text-italic text-base"
                        >
                          No data
                        </span>,
                      }
                    }
                  />,
                  <DataDisplay
                    item={
                      {
                        "dividerLine": false,
                        "title": "Days",
                        "titleNormal": true,
                        "value": <span
                          className="text-italic text-base"
                        >
                          No data
                        </span>,
                      }
                    }
                  />,
                  <DataDisplay
                    item={
                      {
                        "dividerLine": false,
                        "title": "Duties",
                        "titleNormal": true,
                        "value": <span
                          className="text-italic text-base"
                        >
                          No data
                        </span>,
                      }
                    }
                  />,
                  <DataDisplay
                    item={
                      {
                        "dividerLine": false,
                        "title": "Pay Grade",
                        "titleNormal": true,
                        "value": <span
                          className="text-italic text-base"
                        >
                          No data
                        </span>,
                      }
                    }
                  />,
                  <DataDisplay
                    item={
                      {
                        "dividerLine": false,
                        "title": "Employment Type",
                        "titleNormal": true,
                        "value": <span
                          className="text-italic text-base"
                        >
                          No data
                        </span>,
                      }
                    }
                  />,
                ],
              }
            }
          />
          <DataDisplay
            item={
              {
                "dividerLine": false,
                "title": "Hazard",
                "value": <span
                  className="text-italic text-base"
                >
                  No data
                </span>,
              }
            }
          />
        </React.Fragment>,
        "expanded": false,
        "headingLevel": "h5",
        "id": "12345",
        "title": <div
          className="display-flex flex-row flex-no-wrap flex-justify"
        >
          <span>
            Nursing, psychiatric, and home health aides
          </span>
          <span
            className="font-size-xs text-base"
          >
            Current
             Employment
          </span>
        </div>,
      },
      {
        "content": <React.Fragment>
          <DataDisplay
            item={
              {
                "title": "Dates",
                "value": "01/04/2018 - Present",
              }
            }
          />
          <DataDisplay
            item={
              {
                "title": "Industry",
                "value": <span
                  className="text-italic text-base"
                >
                  No data
                </span>,
              }
            }
          />
          <DataDisplay
            item={
              {
                "fullWidthContent": true,
                "title": "Workplace Information",
                "value": [
                  <DataDisplay
                    item={
                      {
                        "dividerLine": false,
                        "title": "Address",
                        "titleNormal": true,
                        "value": "123 Test St
Nowhereville, KS",
                      }
                    }
                  />,
                  <DataDisplay
                    item={
                      {
                        "dividerLine": false,
                        "title": "Schedule",
                        "titleNormal": true,
                        "value": <span
                          className="text-italic text-base"
                        >
                          No data
                        </span>,
                      }
                    }
                  />,
                  <DataDisplay
                    item={
                      {
                        "dividerLine": false,
                        "title": "Hours",
                        "titleNormal": true,
                        "value": <span
                          className="text-italic text-base"
                        >
                          No data
                        </span>,
                      }
                    }
                  />,
                  <DataDisplay
                    item={
                      {
                        "dividerLine": false,
                        "title": "Days",
                        "titleNormal": true,
                        "value": <span
                          className="text-italic text-base"
                        >
                          No data
                        </span>,
                      }
                    }
                  />,
                  <DataDisplay
                    item={
                      {
                        "dividerLine": false,
                        "title": "Duties",
                        "titleNormal": true,
                        "value": <span
                          className="text-italic text-base"
                        >
                          No data
                        </span>,
                      }
                    }
                  />,
                  <DataDisplay
                    item={
                      {
                        "dividerLine": false,
                        "title": "Pay Grade",
                        "titleNormal": true,
                        "value": <span
                          className="text-italic text-base"
                        >
                          No data
                        </span>,
                      }
                    }
                  />,
                  <DataDisplay
                    item={
                      {
                        "dividerLine": false,
                        "title": "Employment Type",
                        "titleNormal": true,
                        "value": <span
                          className="text-italic text-base"
                        >
                          No data
                        </span>,
                      }
                    }
                  />,
                ],
              }
            }
          />
          <DataDisplay
            item={
              {
                "dividerLine": false,
                "title": "Hazard",
                "value": <span
                  className="text-italic text-base"
                >
                  No data
                </span>,
              }
            }
          />
        </React.Fragment>,
        "expanded": false,
        "headingLevel": "h5",
        "id": "12345",
        "title": <div
          className="display-flex flex-row flex-no-wrap flex-justify"
        >
          <span>
            Construction
          </span>
          <span
            className="font-size-xs text-base"
          >
            Current
             Employment
          </span>
        </div>,
      },
    ]
  }
/>
`;

exports[`evaluateFhirDataService tests Evaluate Patient Info: Social History Evaluate Occupation History should match snapshot when no workplace info 1`] = `
<ExpandCollapseAccordion
  className="accordion-rr"
  descriptor="employment details"
  items={
    [
      {
        "content": <React.Fragment>
          <DataDisplay
            item={
              {
                "title": "Dates",
                "value": "01/04/2020 - Present",
              }
            }
          />
          <DataDisplay
            item={
              {
                "title": "Industry",
                "value": "~industry~",
              }
            }
          />
          <DataDisplay
            item={
              {
                "fullWidthContent": false,
                "title": "Workplace Information",
                "value": <span
                  className="text-italic text-base"
                >
                  No data
                </span>,
              }
            }
          />
          <DataDisplay
            item={
              {
                "dividerLine": false,
                "title": "Hazard",
                "value": "~hazard~",
              }
            }
          />
        </React.Fragment>,
        "expanded": false,
        "headingLevel": "h5",
        "id": "12345",
        "title": <div
          className="display-flex flex-row flex-no-wrap flex-justify"
        >
          <span />
          <span
            className="font-size-xs text-base"
          >
            Current
             Employment
          </span>
        </div>,
      },
    ]
  }
/>
`;

exports[`evaluateFhirDataService tests Evaluate Patient Info: Social History Evaluate Occupation History should match snapshot when partial info 1`] = `
<ExpandCollapseAccordion
  className="accordion-rr"
  descriptor="employment details"
  items={
    [
      {
        "content": <React.Fragment>
          <DataDisplay
            item={
              {
                "title": "Dates",
                "value": "01/04/2020 - Present",
              }
            }
          />
          <DataDisplay
            item={
              {
                "title": "Industry",
                "value": "~industry~",
              }
            }
          />
          <DataDisplay
            item={
              {
                "fullWidthContent": true,
                "title": "Workplace Information",
                "value": [
                  <DataDisplay
                    item={
                      {
                        "dividerLine": false,
                        "title": "Address",
                        "titleNormal": true,
                        "value": <span
                          className="text-italic text-base"
                        >
                          No data
                        </span>,
                      }
                    }
                  />,
                  <DataDisplay
                    item={
                      {
                        "dividerLine": false,
                        "title": "Schedule",
                        "titleNormal": true,
                        "value": <span
                          className="text-italic text-base"
                        >
                          No data
                        </span>,
                      }
                    }
                  />,
                  <DataDisplay
                    item={
                      {
                        "dividerLine": false,
                        "title": "Hours",
                        "titleNormal": true,
                        "value": <span
                          className="text-italic text-base"
                        >
                          No data
                        </span>,
                      }
                    }
                  />,
                  <DataDisplay
                    item={
                      {
                        "dividerLine": false,
                        "title": "Days",
                        "titleNormal": true,
                        "value": <span
                          className="text-italic text-base"
                        >
                          No data
                        </span>,
                      }
                    }
                  />,
                  <DataDisplay
                    item={
                      {
                        "dividerLine": false,
                        "title": "Duties",
                        "titleNormal": true,
                        "value": <span
                          className="text-italic text-base"
                        >
                          No data
                        </span>,
                      }
                    }
                  />,
                  <DataDisplay
                    item={
                      {
                        "dividerLine": false,
                        "title": "Pay Grade",
                        "titleNormal": true,
                        "value": "~pay grade~",
                      }
                    }
                  />,
                  <DataDisplay
                    item={
                      {
                        "dividerLine": false,
                        "title": "Employment Type",
                        "titleNormal": true,
                        "value": "~employment type~",
                      }
                    }
                  />,
                ],
              }
            }
          />
          <DataDisplay
            item={
              {
                "dividerLine": false,
                "title": "Hazard",
                "value": <span
                  className="text-italic text-base"
                >
                  No data
                </span>,
              }
            }
          />
        </React.Fragment>,
        "expanded": false,
        "headingLevel": "h5",
        "id": "12345",
        "title": <div
          className="display-flex flex-row flex-no-wrap flex-justify"
        >
          <span />
          <span
            className="font-size-xs text-base"
          >
            Current
             Employment
          </span>
        </div>,
      },
    ]
  }
/>
`;
